--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Zichang's Portfolio
-description: This website shows my works in several fields.
+description: zichangliu@gmail.com
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
